phase 3 completed